--- a/game.css
+++ b/game.css
@@ -4,6 +4,7 @@
          url('/assets/myfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 body {
